tests/NormalTests/paczka1/small_fuzzy/17039555.err
Error in line 6: V9zs9fZ A827 49,3
Error in line 13: S239 S324 66,35
